--- a/templates/auth/profile_update.html
+++ b/templates/auth/profile_update.html
@@ -24,7 +24,7 @@
                     <div class="col-lg-5">
                         <div class="card mb-4 h-100">
                             <div class="card-body text-center pb-0">
-                                <div class="mt-1 mb-4 ">
+                                <div class="mt-1 mb-4 d-flex justify-content-center">
                                     {{ profile_form.avatar|as_crispy_field }}
                                 </div>
                                 <div class="mb-4">
