--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,7 @@
 
             {% if not user.is_authenticated %}
                 <ul class="nav justify-content-end">
-                    <li class="nav-item mx-2">
+                    <li class="nav-item mx-3">
                         <div>
                             <button class="btn btn-outline-light" onclick="location.href='{% url 'login' %}'"
                                     aria-expanded="false">
@@ -87,7 +87,7 @@
                             </button>
                         </div>
                     </li>
-                    <li class="nav-item mx-3">
+                    <li class="nav-item">
                         <div>
                             <button class="btn btn-outline-light" onclick="location.href='{% url 'register' %}'"
                                     aria-expanded="false">
